turtleart.flower.Flower.scala.error
Compilation error:
Flower:14: error: '<-' expected but ')' found.
  for(i<1 to 4){
              ^Flower:33: error: illegal start of simple expression
} 
^